# ul-fri-nlp-course-project-2024-2025-onlytokens

./: .gitignore  Instructions.md  README.md  config.yaml  contenttt.txt  debug_save.md  main.py  pyproject.toml  requirements.txt  search_results.json  t.py
eval/: README.md  analysis.py  autograde_df.py  base_eval.py  config.yaml  eval.py  new_qa_test_set.csv
eval/final_results/: aggregated_grades_complete.jsonl  custom_dataset_results.jsonl  experiment_with_quality_check.jsonl  expiriment_normal_pipeline.jsonl  plot.py
examples/: litellm_example.py  simple_query.py
rag_search/: api_server.py  main.py  web_search_tool_for_openwebui.py
rag_search/context/: builder.py
rag_search/embedding/: sentence_transformer.py
rag_search/llm/: __init__.py  local.py  openai_provider.py  prompts.py  provider.py
rag_search/processing/: chunker.py  embedder.py  llm_query_enhancer.py  query_enhancer.py  reranker.py  retriever.py
rag_search/reranker/: cosine.py  cross_encoder.py
rag_search/scraping/: basic_web_scraper.py  crawl4ai_scraper.py  quality_scorer.py  scraper.py  strategies.py  strategy_factory.py  utils.py
rag_search/search/: base.py  searxng.py
rag_search/utils/: async_utils.py  base_logger.py  logging.py  pipeline_logger.py
report/: report.bib  report.tex
report/old/: report_0.tex
searxng-docker/: Caddyfile  docker-compose.yaml  env
searxng-docker/searxng/: limiter.toml  settings.yml  settings.yml.new
