[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag_search"
version = "0.1.0"
description = "RAG Search implementation"
requires-python = ">=3.9"
dependencies = [
    "annotated-types",
    "anyio",
    "beautifulsoup4",
    "certifi",
    "charset-normalizer",
    "click",
    "fastapi",
    "filelock",
    "fsspec",
    "h11",
    "huggingface-hub",
    "idna",
    "jinja2",
    "markupsafe",
    "mpmath",
    "networkx",
    "numpy",
    "packaging",
    "pydantic",
    "pydantic-core",
    "python-dotenv",
    "pyyaml",
    "regex",
    "requests",
    "safetensors",
    "setuptools",
    "sniffio",
    "soupsieve",
    "starlette",
    "sympy",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
    "typing-extensions",
    "typing-inspection",
    "urllib3",
    "uvicorn"
]

[tool.hatch.build.targets.wheel]
packages = ["rag_search"]
