[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag_search"
version = "0.1.0"
description = "RAG Search implementation"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.3",
    "bs4==0.0.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "Crawl4AI==0.6.2",
    "cryptography==44.0.2",
    "cssselect==1.3.0",
    "distro==1.9.0",
    "einops==0.8.1",
    "fake-http-header==0.3.5",
    "fake-useragent==2.1.0",
    "fastapi==0.115.12",
    "fasttext==0.9.3",
    "faust-cchardet==2.1.19",
    "filelock==3.18.0",
    "firecrawl-py==1.15.0",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.30.1",
    "humanize==4.12.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain==0.3.23",
    "langchain-core==0.3.51",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.24",
    "litellm==1.65.4",
    "lxml==5.3.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.3.2",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.4",
    "openai==1.70.0",
    "orjson==3.10.16",
    "packaging==24.2",
    "pillow==10.4.0",
    "playwright==1.51.0",
    "propcache==0.3.1",
    "psutil==7.0.0",
    "pybind11==2.13.6",
    "pycparser==2.22",
    "pydantic==2.11.2",
    "pydantic-core==2.33.1",
    "pyee==12.1.1",
    "pygments==2.19.1",
    "pyopenssl==25.0.0",
    "pyperclip==1.9.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.0.2",
    "setuptools==78.1.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.40",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "termcolor==3.0.1",
    "tf-playwright-stealth==1.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.50.3",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
    "wikipedia-api==0.8.1",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_search"]
